--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,50 +3,20 @@ Font Family
 -------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&family=Volkhov:wght@700&display=swap");
 
-/*-----------------
-VARIABLES CSS
--------------------*/
-:root {
-  --header-height: 3rem;
+/* ----------------
+Common CSS
+------------------- */
 
-  /*--------Colors ---------*/
-  --title-color: #;
-  --text-color: #;
-  --text-color-light: #;
-  --container-color: #;
-  --container-color-alt: #;
-  --body-color: #;
-
-  /*-------- Font and typography ---------*/
-  --body-font: "Poppins", sans-serif;
-  --biggest-font-size: 2.25rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1rem;
-  --normal-font-size: 0.938rem;
-  --small-font-size: 0.875rem;
-  --smaller-font-size: 0.13rem;
-
-  /*-------- Font weight ---------*/
-  --font-regular: 500;
-  --font-medium: 500;
-  --font-bold: 700;
-
-  /*-------- z index ---------*/
-  --z-tooltip: 10;
-  --z-fixed: 100;
+ul {
+  list-style: none;
 }
 
-@media screen and (min-width: 968px) {
-  :root {
-    --biggest-font-size: 3.5rem;
-    --h1-font-size: 2.25rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
-  }
+a {
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
 }
 
 /* -----------------
@@ -56,7 +26,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: var(--body-font);
+  font-family: "Poppins", sans-serif;
   /* font-family: "Poppins", sans-serif; */
   /* font-family: "Volkhov", serif; */
 }
@@ -64,6 +34,38 @@ body {
 /* -----------------
 Header Area CSS
 -------------------*/
+.header-area {
+  background-image: url("../img/background.png");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  top: -1rem;
+}
+
+.nav,
+.logo {
+  margin-top: 16px;
+}
+
+.nav-item {
+  margin: 0 15px;
+}
+
+.nav-item:nth-last-child(2) {
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+.nav-link {
+  color: #323232;
+}
+
+.nav-link:hover {
+  color: #fff;
+  background-color: black;
+}
 
 /* -----------------
 Services Area CSS
