--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,75 @@ Header Area CSS
   height: auto;
 }
 
+/* Hero Button  */
+
+.header__button {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+}
+
+.find__button {
+  display: inline-block;
+  padding: 18px 30px;
+  background-color: transparent;
+  border-radius: 10px;
+  font-weight: 500;
+  transition: all 0.5s ease;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: inherit;
+  line-height: 1.5;
+  user-select: none;
+  border: none;
+}
+
+.hero__btn {
+  background-color: #f1a501;
+}
+
+.video__play {
+  display: inline-block;
+  margin-left: 20px;
+  height: 60px;
+  width: 60px;
+  background-color: transparent;
+  border-radius: 50%;
+  font-weight: 500;
+  transition: all 0.5s ease;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: inherit;
+  line-height: 1.5;
+  user-select: none;
+  border: none;
+  position: relative;
+}
+
+.video__play i {
+  position: absolute;
+  margin: 22px 20px 25px 25px;
+}
+
+.play__btn {
+  background-color: #df6951;
+}
+
+.video_button {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding-left: 5px;
+}
+
+.video_button span {
+  margin-left: 7px;
+}
 /* -----------------
 Services Area CSS
 -------------------*/
